Part_1/1.10_even_more_services/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345 # port that the service will expose
      protocol: TCP
      targetPort: 5000 # port that the container is listening on
